@@ -86,7 +86,7 @@ public abstract class AbstractWidgetConverter implements PropertyConverter {
                                         val.setValue((String) entry.get("id"));
                                         return val;
                                     })
-                                    .collect(toList());
+                                    .toList();
                         })
                         .orElse(emptyList()));
     }
@@ -140,7 +140,7 @@ public abstract class AbstractWidgetConverter implements PropertyConverter {
                                 .setPath(path.endsWith("[]") ? path.substring(0, path.length() - "[]".length()) : path);
                         return parameter;
                     })
-                    .collect(toList());
+                    .toList();
 
             // if we are empty and there was no "empty" object then fail
             if (!propertiesPrefix.startsWith("$") && resolvedParams.isEmpty()
@@ -149,7 +149,7 @@ public abstract class AbstractWidgetConverter implements PropertyConverter {
                         + ref.getFamily() + "/" + ref.getType() + "/" + ref.getName());
             }
             return resolvedParams.stream();
-        }).collect(toList())).orElse(null);
+        }).toList()).orElse(null);
     }
 
     protected UiSchema newUiSchema(final PropertyContext<?> ctx) {
@@ -330,7 +330,6 @@ public abstract class AbstractWidgetConverter implements PropertyConverter {
                             .collect(toList());
                     final Map<String, Collection<Object>> condition = values.size() == 1 ? values.iterator().next()
                             : new UiSchema.ConditionBuilder().withOperator("or").withValues(values).build();
-                    final UiSchema.ConditionValuesBuilder rootBuilder;
                     if (!shouldBe) { // no need to add the wrapper if we test true (default)
                         return new UiSchema.ConditionBuilder()
                                 .withOperator("==")
@@ -380,8 +379,7 @@ public abstract class AbstractWidgetConverter implements PropertyConverter {
                         .withVar(path + ".length")
                         .withValue(value instanceof String ? Integer.parseInt(String.valueOf(value)) : value)
                         .build();
-            case "contains":
-            case "contains(lowercase=true)":
+            case "contains", "contains(lowercase=true)":
                 final UiSchema.ConditionValuesBuilder in = new UiSchema.ConditionBuilder().withOperator("in");
                 final Object val =
                         strategy.endsWith("(lowercase=true)") ? ((String) value).toLowerCase(ROOT) : value;
