@@ -16,7 +16,6 @@
 package org.talend.sdk.component.design.extension.flows;
 
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Stream.concat;
 import static java.util.stream.Stream.of;
 
@@ -31,6 +30,7 @@ import org.talend.sdk.component.api.processor.ElementListener;
 import org.talend.sdk.component.api.processor.Input;
 import org.talend.sdk.component.api.processor.Output;
 import org.talend.sdk.component.runtime.output.Branches;
+import org.talend.sdk.component.runtime.output.OutputBranches;
 
 import lombok.AllArgsConstructor;
 
@@ -49,7 +49,7 @@ class ProcessorFlowsFactory implements FlowsFactory {
                 .orElseGet(() -> getAfterGroup().map(it -> Stream.of(it.getParameters())).orElseGet(Stream::empty))
                 .filter(this::isInput)
                 .map(this::mapInputName)
-                .collect(toList());
+                .toList();
     }
 
     @Override
@@ -58,7 +58,7 @@ class ProcessorFlowsFactory implements FlowsFactory {
                 getListener()
                         .map(listener -> concat(getReturnedBranches(listener), getOutputParameters(listener)))
                         .orElseGet(Stream::empty),
-                getAfterGroup().map(this::getOutputParameters).orElseGet(Stream::empty)).distinct().collect(toList());
+                getAfterGroup().map(this::getOutputParameters).orElseGet(Stream::empty)).distinct().toList();
     }
 
     private Optional<Method> getAfterGroup() {
@@ -71,7 +71,7 @@ class ProcessorFlowsFactory implements FlowsFactory {
     private Stream<String> getOutputParameters(final Method listener) {
         return of(listener.getParameters())
                 .filter(p -> p.isAnnotationPresent(Output.class))
-                .map(p -> p.getAnnotation(Output.class).value());
+                .flatMap(p -> OutputBranches.of(p.getAnnotation(Output.class)));
     }
 
     private Stream<String> getReturnedBranches(final Method listener) {
