@@ -18,7 +18,6 @@ package org.talend.sdk.component.runtime.output;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.talend.sdk.component.runtime.reflect.Parameters.isGroupBuffer;
 
@@ -56,6 +55,7 @@ import org.talend.sdk.component.api.processor.BeforeGroup;
 import org.talend.sdk.component.api.processor.ElementListener;
 import org.talend.sdk.component.api.processor.Input;
 import org.talend.sdk.component.api.processor.LastGroup;
+import org.talend.sdk.component.api.processor.MultiOutputIterator;
 import org.talend.sdk.component.api.processor.Output;
 import org.talend.sdk.component.api.service.record.RecordBuilderFactory;
 import org.talend.sdk.component.runtime.base.Delegated;
@@ -116,13 +116,13 @@ public class ProcessorImpl extends LifecycleImpl implements Processor, Delegated
     @Override
     public void beforeGroup() {
         if (beforeGroup == null) {
-            beforeGroup = findMethods(BeforeGroup.class).collect(toList());
-            afterGroup = findMethods(AfterGroup.class).collect(toList());
+            beforeGroup = findMethods(BeforeGroup.class).toList();
+            afterGroup = findMethods(AfterGroup.class).toList();
             process = findMethods(ElementListener.class).findFirst().orElse(null);
 
             // IMPORTANT: ensure you call only once the create(....), see studio integration (mojo)
             parameterBuilderProcess = process == null ? emptyList()
-                    : Stream.of(process.getParameters()).map(this::buildProcessParamBuilder).collect(toList());
+                    : Stream.of(process.getParameters()).map(this::buildProcessParamBuilder).toList();
             parameterBuilderAfterGroup = afterGroup
                     .stream()
                     .map(after -> new AbstractMap.SimpleEntry<>(after, Stream.of(after.getParameters())
@@ -134,7 +134,7 @@ public class ProcessorImpl extends LifecycleImpl implements Processor, Delegated
                                 }
                                 return toOutputParamBuilder(param);
                             })
-                            .collect(toList())))
+                            .toList()))
                     .collect(toMap(AbstractMap.SimpleEntry::getKey, AbstractMap.SimpleEntry::getValue));
             forwardReturn = process != null && process.getReturnType() != void.class;
 
@@ -151,10 +151,14 @@ public class ProcessorImpl extends LifecycleImpl implements Processor, Delegated
 
     private BiFunction<InputFactory, OutputFactory, Object> buildProcessParamBuilder(final Parameter parameter) {
         if (parameter.isAnnotationPresent(Output.class)) {
-            return (inputs, outputs) -> {
-                final String name = parameter.getAnnotation(Output.class).value();
-                return outputs.create(name);
-            };
+            if (MultiOutputIterator.class == parameter.getType()) {
+                return (inputs, outputs) -> outputs.createMultiOutputIterator();
+            }
+            final String name = OutputBranches
+                    .of(parameter.getAnnotation(Output.class))
+                    .findFirst()
+                    .orElse(Branches.DEFAULT_BRANCH);
+            return (inputs, outputs) -> outputs.create(name);
         }
 
         final Class<?> parameterType = parameter.getType();
@@ -168,7 +172,13 @@ public class ProcessorImpl extends LifecycleImpl implements Processor, Delegated
             if (parameter.isAnnotationPresent(LastGroup.class)) {
                 return false;
             }
-            final String name = parameter.getAnnotation(Output.class).value();
+            if (MultiOutputIterator.class == parameter.getType()) {
+                return outputs.createMultiOutputIterator();
+            }
+            final String name = OutputBranches
+                    .of(parameter.getAnnotation(Output.class))
+                    .findFirst()
+                    .orElse(Branches.DEFAULT_BRANCH);
             return outputs.create(name);
         };
     }
