@@ -16,7 +16,6 @@
 package org.talend.sdk.component.runtime.manager.chain.internal;
 
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.Collectors.toSet;
 
@@ -149,7 +148,7 @@ public class JobImpl implements Job {
                     .filter(n -> edges
                             .stream()
                             .noneMatch(l -> l.getFrom().getNode().equals(n) || l.getTo().getNode().equals(n)))
-                    .collect(toList());
+                    .toList();
             orphans.forEach(o -> log.warn("component '" + o + "' is orphan in this graph. it will be ignored."));
             nodes.removeAll(orphans);
 
@@ -182,7 +181,7 @@ public class JobImpl implements Job {
                             .filter(others -> edge.getTo().getNode().equals(others.getTo().getNode()))
                             .map(others -> others.getFrom().getNode())
                             .allMatch(startingNodes::contains))
-                    .collect(toList());
+                    .toList();
             if (level.isEmpty()) {
                 throw new IllegalStateException("the job pipeline has cyclic connection");
             }
@@ -258,12 +257,12 @@ public class JobImpl implements Job {
         public void run() {
             ExecutorBuilder runner = this;
             final Object o = jobProperties.get(ExecutorBuilder.class.getName());
-            if (o instanceof ExecutorBuilder) {
-                runner = (ExecutorBuilder) o;
-            } else if (o instanceof Class) {
-                runner = newRunner((Class) o);
-            } else if (o instanceof String) {
-                final String name = ((String) o).trim();
+            if (o instanceof ExecutorBuilder executorBuilder) {
+                runner = executorBuilder;
+            } else if (o instanceof Class aClass) {
+                runner = newRunner(aClass);
+            } else if (o instanceof String string) {
+                final String name = string.trim();
                 if (!"standalone".equalsIgnoreCase(name) && !"default".equalsIgnoreCase(name)
                         && !"local".equalsIgnoreCase(name)) {
                     if ("beam".equalsIgnoreCase(name)) {
@@ -356,8 +355,8 @@ public class JobImpl implements Job {
                                 .orElseThrow(() -> new IllegalStateException(
                                         "No processor found for:" + component.getNode()));
                         final AtomicInteger maxBatchSize = new AtomicInteger(1);
-                        if (processor instanceof ProcessorImpl) {
-                            ((ProcessorImpl) processor)
+                        if (processor instanceof ProcessorImpl processor1) {
+                            processor1
                                     .getInternalConfiguration()
                                     .entrySet()
                                     .stream()
@@ -533,20 +532,20 @@ public class JobImpl implements Job {
 
         private List<Job.Edge> getConnections(final List<Job.Edge> edges, final Job.Component step,
                 final Function<Edge, Component> direction) {
-            return edges.stream().filter(edge -> direction.apply(edge).equals(step)).collect(toList());
+            return edges.stream().filter(edge -> direction.apply(edge).equals(step)).toList();
         }
 
         public GroupKeyProvider getKeyProvider(final String componentId) {
             if (componentProperties.get(componentId) != null) {
                 final Object o = componentProperties.get(componentId).get(GroupKeyProvider.class.getName());
-                if (o instanceof GroupKeyProvider) {
-                    return new GroupKeyProviderImpl((GroupKeyProvider) o);
+                if (o instanceof GroupKeyProvider groupKeyProvider) {
+                    return new GroupKeyProviderImpl(groupKeyProvider);
                 }
             }
 
             final Object o = jobProperties.get(GroupKeyProvider.class.getName());
-            if (o instanceof GroupKeyProvider) {
-                return new GroupKeyProviderImpl((GroupKeyProvider) o);
+            if (o instanceof GroupKeyProvider groupKeyProvider) {
+                return new GroupKeyProviderImpl(groupKeyProvider);
             }
 
             final ServiceLoader<GroupKeyProvider> services = ServiceLoader.load(GroupKeyProvider.class);
