@@ -148,14 +148,14 @@ public class VisibilityService {
                         return "0".equals(expected);
                     }
                     final int expectedSize = Integer.parseInt(expected);
-                    if (actual instanceof Collection) {
-                        return expectedSize == ((Collection) actual).size();
+                    if (actual instanceof Collection collection1) {
+                        return expectedSize == collection1.size();
                     }
                     if (actual.getClass().isArray()) {
                         return expectedSize == Array.getLength(actual);
                     }
-                    if (actual instanceof String) {
-                        return expectedSize == ((String) actual).length();
+                    if (actual instanceof String s) {
+                        return expectedSize == s.length();
                     }
                     return false;
                 default:
@@ -190,8 +190,8 @@ public class VisibilityService {
                                     .map(it -> it.contains(expected))
                                     .orElse(false);
                         }
-                        if (actual instanceof Collection) {
-                            final Collection<?> collection = (Collection) actual;
+                        if (actual instanceof Collection collectionClass) {
+                            final Collection<?> collection = collectionClass;
                             return collection.stream().map(preprocessor).anyMatch(it -> it.contains(expected));
                         }
                         if (actual.getClass().isArray()) {
@@ -218,7 +218,7 @@ public class VisibilityService {
         private Object mapValue(final JsonValue value) {
             switch (value.getValueType()) {
                 case ARRAY:
-                    return value.asJsonArray().stream().map(this::mapValue).collect(toList());
+                    return value.asJsonArray().stream().map(this::mapValue).toList();
                 case STRING:
                     return ((JsonString) value).getString();
                 case TRUE:
