@@ -15,7 +15,6 @@
  */
 package org.talend.sdk.component.junit;
 
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
 import java.io.Serializable;
@@ -50,7 +49,7 @@ public final class RecordAsserts implements Function<Iterable<Map<String, List<S
                                 .of(u1, u2)
                                 .filter(Objects::nonNull)
                                 .flatMap(Collection::stream)
-                                .collect(toList())));
+                                .toList()));
 
         // if we want to validate some outputs which are not here it means the
         // validation fails
