@@ -18,7 +18,6 @@ package org.talend.sdk.component.server.front;
 import static java.util.Arrays.asList;
 import static java.util.Optional.ofNullable;
 import static java.util.function.Function.identity;
-import static java.util.stream.Collectors.toList;
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON_TYPE;
 
 import java.util.Collection;
@@ -42,6 +41,8 @@ import javax.ws.rs.core.HttpHeaders;
 import javax.ws.rs.core.Response;
 
 import org.talend.sdk.component.api.exception.ComponentException;
+import org.talend.sdk.component.api.exception.DiscoverSchemaException;
+import org.talend.sdk.component.api.exception.DiscoverSchemaException.HandleErrorWith;
 import org.talend.sdk.component.runtime.manager.ComponentManager;
 import org.talend.sdk.component.runtime.manager.ContainerComponentRegistry;
 import org.talend.sdk.component.runtime.manager.ServiceMeta;
@@ -124,7 +125,7 @@ public class ActionResourceImpl implements ActionResource {
         return new ActionList(Stream
                 .concat(findDeployedActions(typeMatcher, componentMatcher, locale),
                         findVirtualActions(typeMatcher, componentMatcher, locale))
-                .collect(toList()));
+                .toList());
     }
 
     private CompletableFuture<Response> doExecuteLocalAction(final String family, final String type,
@@ -176,16 +177,15 @@ public class ActionResourceImpl implements ActionResource {
             // check org.talend.sdk.component.server.service.ComponentManagerService.readCurrentLocale if you change it
         }, Runnable::run).exceptionally(e -> {
             final Throwable cause;
-            if (e.getCause() instanceof ExecutionException) {
-                cause = e.getCause().getCause();
+            if (e.getCause() instanceof final ExecutionException exece) {
+                cause = exece.getCause();
             } else {
                 cause = e.getCause();
             }
-            if (cause instanceof WebApplicationException) {
-                final WebApplicationException wae = (WebApplicationException) cause;
+            if (cause instanceof WebApplicationException wae) {
                 final Response response = wae.getResponse();
                 String message = "";
-                if (wae.getResponse().getEntity() instanceof ErrorPayload) {
+                if (response.getEntity() instanceof ErrorPayload) {
                     throw wae; // already logged and setup broken so just rethrow
                 } else {
                     try {
@@ -212,30 +212,48 @@ public class ActionResourceImpl implements ActionResource {
 
     private Response onError(final Throwable re) {
         log.warn(re.getMessage(), re);
-        if (re.getCause() instanceof WebApplicationException) {
-            return ((WebApplicationException) re.getCause()).getResponse();
+        if (re instanceof final WebApplicationException webException) {
+            return webException.getResponse();
+        } else if (re.getCause() instanceof final WebApplicationException webException) {
+            return webException.getResponse();
         }
 
-        if (re instanceof ComponentException) {
-            final ComponentException ce = (ComponentException) re;
+        final String description = "Action execution failed with: " + ofNullable(re.getMessage())
+                .orElseGet(() -> re instanceof NullPointerException
+                        ? "unexpected null"
+                        : "no error message");
+        if (re instanceof final DiscoverSchemaException eSchema) {
+            // we send reason to recognize the error on client side
+            final String subCode = ofNullable(eSchema.getPossibleHandleErrorWith())
+                    .orElse(HandleErrorWith.EXCEPTION)
+                    .toString();
             throw new WebApplicationException(Response
-                    .status(ce.getErrorOrigin() == ComponentException.ErrorOrigin.USER ? 400
-                            : ce.getErrorOrigin() == ComponentException.ErrorOrigin.BACKEND ? 456 : 520,
-                            "Unexpected callback error")
-                    .entity(new ErrorPayload(ErrorDictionary.ACTION_ERROR,
-                            "Action execution failed with: " + ofNullable(re.getMessage())
-                                    .orElseGet(() -> re instanceof NullPointerException ? "unexpected null"
-                                            : "no error message")))
+                    .status(400, subCode)
+                    .entity(new ErrorPayload(ErrorDictionary.ACTION_ERROR, subCode, description))
+                    .build());
+        } else if (re instanceof final ComponentException eComponent) {
+            throw new WebApplicationException(Response
+                    .status(evaluateStatusCodeForException(eComponent), "Unexpected callback error")
+                    .entity(new ErrorPayload(ErrorDictionary.ACTION_ERROR, description))
                     .build());
         }
 
         throw new WebApplicationException(Response
                 .status(520, "Unexpected callback error")
-                .entity(new ErrorPayload(ErrorDictionary.ACTION_ERROR,
-                        "Action execution failed with: " + ofNullable(re.getMessage())
-                                .orElseGet(() -> re instanceof NullPointerException ? "unexpected null"
-                                        : "no error message")))
+                .entity(new ErrorPayload(ErrorDictionary.ACTION_ERROR, description))
                 .build());
+    }
+
+    private static int evaluateStatusCodeForException(final ComponentException eComponent) {
+        if (null == eComponent.getErrorOrigin()) {
+            return 520;
+        }
+
+        return switch (eComponent.getErrorOrigin()) {
+            case USER -> 400;
+            case BACKEND -> 456;
+            default -> 520;
+        };
     }
 
     private Stream<ActionItem> findVirtualActions(final Predicate<String> typeMatcher,
@@ -262,6 +280,6 @@ public class ActionResourceImpl implements ActionResource {
                         .map(s -> new ActionItem(s.getFamily(), s.getType(), s.getAction(),
                                 propertiesService
                                         .buildProperties(s.getParameters().get(), c.getLoader(), locale, null)
-                                        .collect(toList()))));
+                                        .toList())));
     }
 }
