@@ -15,8 +15,6 @@
  */
 package org.talend.sdk.component.runtime.di.beam;
 
-import static java.util.stream.Collectors.toList;
-
 import java.io.IOException;
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -44,7 +42,7 @@ public class DelegatingUnBoundedSource<A, B extends UnboundedSource.CheckpointMa
             throws Exception {
         final List<? extends UnboundedSource<A, B>> sources = delegate.split(desiredNumSplits, options);
         listener.onSplit(sources.size());
-        return sources.stream().map(s -> new DelegatingUnBoundedSource<>(s, listener)).collect(toList());
+        return sources.stream().map(s -> new DelegatingUnBoundedSource<>(s, listener)).toList();
     }
 
     @Override
