@@ -17,7 +17,6 @@ package org.talend.sdk.component.tools.validator;
 
 import static java.util.Arrays.asList;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Stream.of;
 
 import java.io.BufferedWriter;
@@ -125,7 +124,7 @@ public class InternationalizationValidator implements Validator {
                         .sorted()
                         .distinct(),
                 missingDisplayNameEnum)
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> missingPlaceholderTranslations = Collections.emptyList();
         if (this.validatePlaceholder) {
@@ -144,7 +143,7 @@ public class InternationalizationValidator implements Validator {
                     .map(f -> " " + f.getDeclaringClass().getSimpleName() + "." + f.getName() + "._placeholder = ")
                     .sorted()
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         if (this.autofix && !toFix.isEmpty()) {
@@ -207,11 +206,17 @@ public class InternationalizationValidator implements Validator {
                 .orElseGet(Stream::empty);
 
         if (this.autofix) {
-            List<String> forLogs = result.collect(toList());
+            List<String> forLogs = result.toList();
             String resultAutoFix = forLogs.stream()
                     .collect(Collectors.joining("\n", "Automatically fixed missing labels:\n",
-                            "\n\nPlease, check changes and disable '-Dtalend.validation.internationalization.autofix=false' / "
-                                    + "'<validateInternationalizationAutoFix>false</>'property.\n\n"));
+                            """
+
+
+                            Please review the changes, then disable further autofixes with \
+                            '-Dtalend.validation.internationalization.autofix=false' or \
+                            '<validateInternationalizationAutoFix>false</validateInternationalizationAutoFix>'.
+
+                            """));
             log.info(resultAutoFix);
 
             result = forLogs.stream();
@@ -259,7 +264,7 @@ public class InternationalizationValidator implements Validator {
 
         final String prefix = this.findPrefix(component);
         final Collection<String> missingKeys =
-                of("_displayName").map(n -> prefix + "." + n).filter(k -> !bundle.containsKey(k)).collect(toList());
+                of("_displayName").map(n -> prefix + "." + n).filter(k -> !bundle.containsKey(k)).toList();
         if (!missingKeys.isEmpty()) {
             return baseName + " is missing the key(s): " + String.join("\n", missingKeys);
         }
