@@ -153,9 +153,14 @@ public class VaultClient {
     private Pattern compiledPassthroughRegex;
 
     private final Predicate<Throwable> shouldRetry = cause -> {
-        if (cause instanceof WebApplicationException) {
-            final WebApplicationException wae = (WebApplicationException) cause;
-            final int status = wae.getResponse().getStatus();
+        if (cause instanceof WebApplicationException wae) {
+            final Response response = wae.getResponse();
+            if (response == null) {
+                // no response information: don't make the retry loop NPE, keep retrying as a
+                // recoverable error (the underlying cause is logged by retryFuture).
+                return true;
+            }
+            final int status = response.getStatus();
             if (Status.NOT_FOUND.getStatusCode() == status || status >= 500) {
                 return false;
             }
@@ -243,7 +248,7 @@ public class VaultClient {
                 .stream()
                 .filter(entry -> compiledPassthroughRegex.matcher(entry.getValue()).matches())
                 .map(cyphered -> cyphered.getKey())
-                .collect(toList());
+                .toList();
         if (cipheredKeys.isEmpty()) {
             return values;
         }
@@ -253,7 +258,7 @@ public class VaultClient {
 
     private CompletableFuture<Map<String, String>> prepareRequest(final Map<String, String> values,
             final List<String> cipheredKeys, final String tenantId) {
-        return get(cipheredKeys.stream().map(values::get).collect(toList()), clock.millis(), tenantId)
+        return get(cipheredKeys.stream().map(values::get).toList(), clock.millis(), tenantId)
                 .thenApply(decrypted -> values
                         .entrySet()
                         .stream()
@@ -272,13 +277,13 @@ public class VaultClient {
                 .stream()
                 .map(it -> new EntryWithIndex<>(index.getAndIncrement(), it))
                 .filter(it -> it.entry != null && !compiledPassthroughRegex.matcher(it.entry).matches())
-                .collect(toList());
+                .toList();
         if (clearValues.isEmpty()) {
             return doDecipher(values, currentTime, tenantId).toCompletableFuture();
         }
         if (clearValues.size() == values.size()) {
             final long now = clock.millis();
-            return completedFuture(values.stream().map(it -> new DecryptedValue(it, now)).collect(toList()));
+            return completedFuture(values.stream().map(it -> new DecryptedValue(it, now)).toList());
         }
         return doDecipher(values, currentTime, tenantId).thenApply(deciphered -> {
             final long now = clock.millis();
@@ -296,9 +301,9 @@ public class VaultClient {
                 .stream()
                 .filter(it -> !it.getValue().isPresent())
                 .map(Map.Entry::getKey)
-                .collect(toList());
+                .toList();
         if (missing.isEmpty()) { // no remote call, yeah
-            return completedFuture(values.stream().map(alreadyCached::get).map(Optional::get).collect(toList()));
+            return completedFuture(values.stream().map(alreadyCached::get).map(Optional::get).toList());
         }
         // do request
         return getOrRequestAuth()
@@ -354,11 +359,10 @@ public class VaultClient {
                             })
                             // oops, smtg went wrong
                             .exceptionally(e -> {
-                                final Throwable cause = e.getCause();
+                                final Throwable cause = unwrap(e);
                                 String message = "";
                                 int status = cantDecipherStatusCode;
-                                if (cause instanceof WebApplicationException) {
-                                    final WebApplicationException wae = (WebApplicationException) cause;
+                                if (cause instanceof WebApplicationException wae) {
                                     final Response response = wae.getResponse();
                                     if (response != null) {
                                         if (response.getEntity() instanceof ErrorPayload) { // internal error
@@ -435,29 +439,33 @@ public class VaultClient {
                     return authentication;
                 })
                 //
-                .exceptionally(e -> {
-                    final Throwable cause = e.getCause();
-                    if (cause instanceof WebApplicationException) {
-                        final WebApplicationException wae = (WebApplicationException) cause;
-                        final Response response = wae.getResponse();
-                        String message = "";
-                        if (wae.getResponse().getEntity() instanceof ErrorPayload) {
-                            throw wae; // already logged and setup broken so just rethrow
-                        } else {
-                            try {
-                                message = response.readEntity(String.class);
-                            } catch (final Exception ignored) {
-                                // no-op
-                            }
-                            if (message.isEmpty()) {
-                                message = cause.getMessage();
-                            }
-                            throwError(response.getStatus(), message);
-                        }
-                    }
-                    throwError(cause);
-                    return null;
-                });
+                .exceptionally(this::handleAuthException);
+    }
+
+    private Authentication handleAuthException(final Throwable e) {
+        final Throwable cause = unwrap(e);
+        if (cause instanceof WebApplicationException wae) {
+            final Response response = wae.getResponse();
+            // if the response is null we cannot extract status/entity, fall back to the
+            // null-safe throwError(Throwable) below (avoids an NPE that would mask the cause).
+            if (response != null) {
+                String message = "";
+                if (response.getEntity() instanceof ErrorPayload) {
+                    throw wae; // already logged and setup broken so just rethrow
+                }
+                try {
+                    message = response.readEntity(String.class);
+                } catch (final Exception ignored) {
+                    // no-op
+                }
+                if (message == null || message.isEmpty()) {
+                    message = cause.getMessage();
+                }
+                throwError(response.getStatus(), message);
+            }
+        }
+        throwError(cause);
+        return null;
     }
 
     private <T> CompletableFuture<T> withRetries(final Supplier<CompletableFuture<T>> attempt,
@@ -476,9 +484,9 @@ public class VaultClient {
         log
                 .info("[retryFuture] Retry failed operation ({}/{}). Reason: {}.", attemptsSoFar,
                         numberOfRetryOnFailure, throwable.getMessage());
-        if (nextAttempt > numberOfRetryOnFailure || !shouldRetry.test(throwable.getCause())) {
+        if (nextAttempt > numberOfRetryOnFailure || !shouldRetry.test(unwrap(throwable))) {
             log.info("[retryFuture] Stop retry failed operation (condition triggered).");
-            throwError(throwable.getCause());
+            throwError(unwrap(throwable));
         }
         return flatten(flatten(CompletableFuture.supplyAsync(attempter, scheduler))
                 .thenApply(CompletableFuture::completedFuture)
@@ -496,12 +504,16 @@ public class VaultClient {
     }
 
     private void throwError(final Throwable cause) {
+        // CompletableFuture#exceptionally hands the exception "as is". If the previous stage threw
+        // the exception directly (not wrapped in a CompletionException), Throwable#getCause() can
+        // return null. Be defensive so we never trigger an NPE that would mask the original error.
+        final Throwable safeCause = cause != null
+                ? cause
+                : new IllegalStateException("Unknown error (null cause)");
         String message = "";
         int status = cantDecipherStatusCode;
-        if (cause instanceof WebApplicationException) {
-            final WebApplicationException wae = (WebApplicationException) cause;
+        if (safeCause instanceof WebApplicationException wae) {
             final Response response = wae.getResponse();
-            status = response.getStatus();
             if (response != null) {
                 if (response.getEntity() instanceof ErrorPayload) { // internal error
                     throw wae;
@@ -514,11 +526,25 @@ public class VaultClient {
                 }
             }
         }
-        if (message.isEmpty()) {
-            message = cause.getMessage();
+        if (message == null || message.isEmpty()) {
+            message = safeCause.getMessage();
         }
         throw new WebApplicationException(message,
                 Response.status(status).entity(new ErrorPayload(ErrorDictionary.UNEXPECTED, message)).build());
+    }
+
+    /**
+     * Returns a non-null root cause for a {@link Throwable} received by a
+     * {@link java.util.concurrent.CompletableFuture#exceptionally(java.util.function.Function)} lambda.
+     * Falls back to the exception itself when {@link Throwable#getCause()} is {@code null} (the
+     * upstream stage threw the exception directly instead of wrapping it in a {@code CompletionException}).
+     */
+    private static Throwable unwrap(final Throwable e) {
+        if (e == null) {
+            return new IllegalStateException("Unknown error (null exception)");
+        }
+        final Throwable cause = e.getCause();
+        return cause != null ? cause : e;
     }
 
     // workaround while geronimo-config does not support generics of generics
